[workspace]
members = ["./rsiot", "./rsiot-macros"]
exclude = ["./rsiot-esp"]
resolver = "2"


[workspace.package]
categories = ["api-bindings", "gui", "network-programming"]
edition = "2021"
keywords = ["iot", "scada"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Konstantin-Dudersky/rsiot"
rust-version = "1.75.0"


[workspace.dependencies]

# async
async-trait = { version = "0.1.77" }
futures = { version = "0.3.30" }
tokio = { version = "^1.36.0", features = ["macros", "sync", "rt", "time"] }
tokio-util = { version = "0.7.10" }

# datatypes
chrono = { version = "0.4.33", features = ["serde"] }
http = { version = "1.0.0" }
rgb = { version = "0.8.37", features = ["serde"] }
palette = { version = "0.7.4", features = ["named"] }
url = { version = "2.5.0" }
uuid = { version = "1.7.0", features = ["serde", "v4"] }

# documentation
document-features = { version = "0.2.8" }

# errors
anyhow = { version = "1.0.79" }
thiserror = { version = "1.0.56" }

# logging
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "chrono"] }
tracing-loki = { version = "0.2.4" }
tracing-web = { version = "0.1.3" }

# macro
proc-macro2 = { version = "1.0.78" }
proc-macro-error = { version = "1.0.4" }
quote = { version = "1.0.35" }
syn = { version = "2.0.48" }

# serialization / deserialization
serde = { version = "1.0.196", features = ["derive"] }
serde_json = { version = "1.0.113" }


# workspace packages
rsiot-macros = { version = "0.0.64", path = "./rsiot-macros" }
