[package]
categories.workspace = true
description = "Компонент аутентификации"
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "rsiot-auth"
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version = "0.0.70"


[target.'cfg(any(target_arch = "x86_64", target_arch = "aarch64"))'.dependencies]
async-trait = { workspace = true }
hmac = { workspace = true }
jwt = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

rsiot-component-core = { workspace = true }
rsiot-messages-core = { workspace = true }


[target.'cfg(any(target_arch = "x86_64", target_arch = "aarch64"))'.dev-dependencies]
anyhow = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }

rsiot-extra-components = { path = "../rsiot-extra-components" }


[features]
single-thread = ["rsiot-component-core/single-thread"]
