[package]
name = "rsiot-channel-utils"
version = "0.0.2"
edition = "2021"
description = "Вспомогательные компоненты"
license = "MIT"

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }

rsiot-component-core = { workspace = true }
rsiot-messages-core = { workspace = true }

[dev-dependencies]
serde = { workspace = true }
tracing-subscriber = { workspace = true }
