[package]
categories.workspace = true
description = "Типы данных для создания компонентов"
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "rsiot-component-core"
readme = "README.md"
rust-version.workspace = true
version = "0.0.28"

[dependencies]
futures = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

rsiot-messages-core = { workspace = true }

[dev-dependencies]
serde = { workspace = true }
tracing-subscriber = { workspace = true }
