[package]
categories.workspace = true
description = "Типы данных для создания компонентов"
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "rsiot-component-core"
readme = "README.md"
rust-version.workspace = true
version = "0.0.46"

[dependencies]
async-trait = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
tokio = { version = "1", features = ["macros", "sync", "rt"] }
tracing = { workspace = true }

rsiot-messages-core = { workspace = true }

[dev-dependencies]
serde = { workspace = true }
tokio = { version = "1", features = [
    "macros",
    "rt",
    "sync",
    "time",
    "rt-multi-thread",
] }
tracing-subscriber = { workspace = true }


[features]
default = []
single-thread = []


[[example]]
name = "single-thread"
required-features = ["single-thread"]
