[package]
categories.workspace = true
description = "Типы данных для создания компонентов"
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "rsiot-component-core"
readme = "README.md"
rust-version.workspace = true
version = "0.0.62"

[dependencies]
async-trait = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
tokio = { version = "1", features = ["macros", "sync", "rt"] }
tracing = { workspace = true }
uuid = { workspace = true }

rsiot-messages-core = { workspace = true }

[dev-dependencies]
serde = { workspace = true }
tracing-subscriber = { workspace = true }

[target.'cfg(any(target_arch = "x86_64", target_arch = "aarch64"))'.dev-dependencies]
tokio = { version = "1", features = [
    "macros",
    "rt",
    "sync",
    "time",
    "rt-multi-thread",
] }

[features]
default = []
single-thread = []


[[example]]
name = "single-thread"
required-features = ["single-thread"]
