[package]
categories.workspace = true
description = "Типы данных для создания компонентов"
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "rsiot-component-singlethread"
readme = "README.md"
rust-version.workspace = true
version = "0.0.31"

[dependencies]
futures = { workspace = true }
thiserror = { workspace = true }
tokio = { version = "1", features = ["macros", "rt", "sync"] }
tracing = { workspace = true }

rsiot-messages-core = { workspace = true }

[dev-dependencies]
serde = { workspace = true }
