[package]
name = "rsiot-components-config"
version = "0.0.7"
description = "Конфигурация компонентов"
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
rust-version.workspace = true


[dependencies]
url = { workspace = true }
