[package]
name = "rsiot-components-config"
version = "0.0.49"
description = "Конфигурация компонентов"
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme = "README.md"
rust-version.workspace = true


[dependencies]
anyhow = { workspace = true }
http = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }

rsiot-messages-core = { workspace = true }
