[package]
description = "Загрузка переменных среды из ОС и из файла .env"
name = "rsiot-env-vars"
version = "0.0.16"
edition.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true
rust-version.workspace = true

[dependencies]
clap = { workspace = true }
dotenvy = { workspace = true }
envy = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
url = { workspace = true }
