[package]
categories.workspace = true
description = "Чтение входов и запись выходов GPIO микроконтроллера ESP."
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "rsiot-esp-gpio"
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version = "0.0.0"


[dependencies]
tracing = { workspace = true }
tokio = { workspace = true }

rsiot-component-core = { workspace = true }
rsiot-messages-core = { workspace = true }
