[package]
# categories.workspace = true
description = "Чтение входов GPIO микроконтроллера ESP."
edition = "2021"
# keywords.workspace = true
license = "MIT OR Apache-2.0"
name = "rsiot-esp"
readme = "README.md"
# repository.workspace = true
# rust-version.workspace = true
version = "0.0.30"

[profile.release]
opt-level = "s"


[profile.dev]
debug = true
opt-level = "z"


[dependencies]
tokio = { version = "1.35.1" }
esp-idf-svc = { version = "0.47.3", features = ["std"] }
embedded-svc = { version = "0.26.4" }
tracing = { version = "0.1.40" }
postcard = { version = "1", features = ["use-std"] }
serde = { version = "1.0.194" }
thiserror = { version = "1.0.56" }

rsiot-component-core = { version = "0.0.30" }
rsiot-extra-components = { version = "0.0.30" }
rsiot-messages-core = { version = "0.0.30" }

[build-dependencies]
embuild = "0.31.3"
