[package]
description = "Компоненты для работы с периферией микроконтроллеров ESP32"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "rsiot-esp"
readme = "README.md"
version = "0.0.31"

[profile.release]
opt-level = "s"


[profile.dev]
debug = true
opt-level = "z"


[dependencies]
async-trait = { version = "0.1.77" }
tokio = { version = "1.36.0" }
esp-idf-svc = { version = "0.48.1", features = ["std"] }
embedded-svc = { version = "0.27.0" }
tracing = { version = "0.1.40" }
postcard = { version = "1.0.8", features = ["use-std"] }
serde = { version = "1.0.196" }
thiserror = { version = "1.0.46" }

rsiot-component-core = { version = "0.0.62" }
rsiot-messages-core = { version = "0.0.62" }


[build-dependencies]
embuild = "0.31.3"


[features]
single-thread = ["rsiot-component-core/single-thread"]
