[package]
name = "rsiot-extra-components"
version = "0.0.31"
description = "Дополнительные компоненты"
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme = "README.md"
rust-version.workspace = true

[dependencies]
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

rsiot-component-core = { workspace = true }
rsiot-messages-core = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
tracing-subscriber = { workspace = true }
