[package]
name = "rsiot-extra-components"
version = "0.0.71"
description = "Дополнительные компоненты"
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme = "README.md"
rust-version.workspace = true

[dependencies]
async-trait = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["time"] }
tracing = { workspace = true }

rsiot-component-core = { workspace = true }
rsiot-messages-core = { workspace = true }


[dev-dependencies]
anyhow = { workspace = true }
tracing-subscriber = { workspace = true }


[target.'cfg(any(target_arch = "x86_64", target_arch = "aarch64"))'.dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread"] }


[features]
single-thread = ["rsiot-component-core/single-thread"]
