[package]
name = "rsiot-http-client-config"
version = "0.0.7"
description = "Конфигурация HTTP-клиента"
edition.workspace = true
license.workspace = true
readme.workspace = true
rust-version.workspace = true


[dependencies]
http = { workspace = true }
url = { workspace = true }

rsiot-messages-core = { workspace = true }
