[package]
name = "rsiot-http-client-config"
version = "0.0.8"
description = "Конфигурация HTTP-клиента"
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme = "README.md"
rust-version.workspace = true


[dependencies]
http = { workspace = true }
url = { workspace = true }

rsiot-messages-core = { workspace = true }
